Added horizontal loop menu and animations

--- a/arrayTest.html
+++ b/arrayTest.html
@@ -38,18 +38,11 @@
                 <button class="next">next</button>
             </div>
           
-            <div class="wrapper">
-                <div class="box">Photography</div>
-                <div class="box">Graphic Design</div>
-                <div class="box">Information Technology</div>
-                <div class="box" style="width:350px">About Me</div>
-                <div class="box">5</div>
-                <div class="box">6</div>
-                <div class="box">7</div>
-                <div class="box">8</div>
-                <div class="box">9</div>
-                <div class="box">10</div>
-                <div class="box">11</div>
+            <div class="content-wrapper">
+                <div class="content-item">Photography</div>
+                <div class="content-item">Graphic Design</div>
+                <div class="content-item">Information Technology</div>
+                <div class="content-item">About Me</div>
             </div>
         </div>
 
