--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <title>Riley English</title>
         <link href="css/fonts.css" rel="stylesheet" >
         <link href="css/mainStyles.css" rel="stylesheet">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js" integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/TextPlugin.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/Flip.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/Flip.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/Draggable.min.js"></script>
-        <script src="https://assets.codepen.io/16327/InertiaPlugin.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
+        <script src="js/inertiaplugin.js"></script>
         <script src="js/SplitText3.min.js"></script>
         <script src="js/jquery.js"></script>
     </head>
@@ -38,8 +38,13 @@
             </div>
         </div>
         <div class="content-square"></div>
-        <div>
-            <h1 class="content-title">Photography</h1>
+        <div class="center-absolute">
+            <div class="content-wrapper">
+                <div class="content-item">Photography</div>
+                <div class="content-item">Graphic Design</div>
+                <div class="content-item">Information Technology</div>
+                <div class="content-item">About Me</div>
+            </div>
         </div>
 
         <script src="js/mainFunctions.js"></script>
